디자인 가이드 적용

--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -5,15 +5,11 @@ $light: #fff;
 $success: #37dbbe;
 $danger: #b22178;
 $text-muted: #b4b8bf;
-$enable-rounded: false;
 $input-bg: transparentize(rgba(0, 0, 0, 0), 0);
-$input-border-radius: 0;
 $modal-backdrop-opacity: .6;
-$font-family-base: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+$font-family-base: "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-vue/src/index';
-//@import '~prismjs/themes/prism-okaidia';
-@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 
 $bg-base: #f2f5fa;
 
@@ -37,30 +33,37 @@ $widths: (
   }
 }
 
-@mixin icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-  font-size: 1px;
-  line-height: inherit;
-  margin-right: 4px;
-}
+//
+//@mixin icons {
+//  font-family: 'Material Icons';
+//  font-weight: normal;
+//  font-style: normal;
+//  letter-spacing: normal;
+//  text-transform: none;
+//  display: inline-block;
+//  white-space: nowrap;
+//  word-wrap: normal;
+//  direction: ltr;
+//  -webkit-font-feature-settings: 'liga';
+//  -webkit-font-smoothing: antialiased;
+//  font-size: 1px;
+//  line-height: inherit;
+//  margin-right: 4px;
+//}
 
 html, body {
   height: 100vh;
 }
 
 body {
-  color: #2d2d2d;
+  font-size: 20px;
+  color: #373737;
   background-color: #f0f0f0;
+}
+
+h5 {
+  font-size: 22px;
+  font-weight: bold
 }
 
 .bg-muted {
@@ -71,21 +74,8 @@ body {
   font-size: 1.5rem;
 }
 
-.btn-link {
-  color: #2d2d2d;
-}
 
-.bg-input {
-  background-color: rgb(241, 242, 242);
-}
 
-.rounded {
-  border-radius: 1rem !important;
-}
-
-.bg {
-  background: url(../images/bg.jpg) 50% / cover no-repeat;
-}
 
 .vh-100 {
   min-height: 100vh;
@@ -98,7 +88,9 @@ label.required {
   }
 }
 
-.btn-danger {
-  border: 0;
-  background-image: linear-gradient(90deg, rgb(228, 45, 109) 0%, rgb(151, 31, 160) 100%);
+.bg-black-50 {
+  background-color: #dcdbdb;
 }
+
+
+
