--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -1,2 +1,27 @@
-$layout-pd: 78px;
-$border: rgba(204, 209, 219, .4);
+.pages {
+  min-height: 100vh;
+  overflow: hidden;
+  padding-bottom: 50px;
+}
+
+.bg {
+  background: url(../images/bg.jpg) 50% / cover no-repeat;
+}
+
+.logo {
+  width: 356px;
+  height: 66px;
+  background: url(../images/logo@2x.png) 50%/contain no-repeat;
+}
+
+.logo-white {
+  width: 335px;
+  height: 226px;
+  background: url(../images/logo-white@2x.png) 50%/contain no-repeat;
+}
+
+.logo-kr {
+  width: 248px;
+  height: 223px;
+  background: url(../images/logo-kr@2x.png) 50%/contain no-repeat;
+}
