모바일 테스트 완료

--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -1,26 +1,29 @@
 // btn
 .btn {
-  height:64px;
-  font-size: 20px;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  min-height:3.3rem;
+  //font-size: 20px;
+  //padding-left: 1.5rem;
+  //padding-right: 1.5rem;
 }
 
 .btn-link {
   color: #2d2d2d;
-  font-size: 22px;
+  //font-size: 22px;
   font-weight: 600;
 }
 
 .btn-lg {
   min-height: 74px;
-  font-size: 22px;
+  //font-size: 22px;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
 .btn-xl {
-  min-height: 101px;
-  font-size: 30px;
+  //min-height: 101px;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  font-size: 2rem;
   font-weight: 600;
 }
 
@@ -35,13 +38,13 @@
 
 // form
 .rounded {
-  border-radius: 1.5rem !important;
+  border-radius: 1.2rem !important;
 }
 
 .form-control {
-  min-height: 65px;
+  min-height: 3.3rem;
   &::placeholder {
-    font-size: 20px;
+    //font-size: 20px;
     color: #8a8a8a;
     padding-left: 1.2rem;
     padding-right: 1.2rem;
@@ -49,8 +52,6 @@
 }
 
 .col-form-label {
-  //line-height: 2.5;
-  padding-left: 2rem;
 }
 
 .rounded .col-form-label {
@@ -58,8 +59,5 @@
 }
 
 .custom-select {
-  font-size: 20px;
-  line-height: 2.5;
-  padding-left: 1.8rem;
 }
 
