--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -1,10 +1,12 @@
-$primary: #111b5c;
+$primary: #ef4465;
+$secondary: #373737;
 $purple: #7042e6;
 $info: #34a6e0;
 $light: #fff;
 $success: #37dbbe;
 $danger: #b22178;
-$text-muted: #b4b8bf;
+//$text-muted: #b4b8bf;
+$text-muted: #f0f0f0;
 $input-bg: transparentize(rgba(0, 0, 0, 0), 0);
 $modal-backdrop-opacity: .6;
 $font-family-base: "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -34,26 +36,52 @@ $widths: (
 }
 
 html, body {
-  height:100%;
+  height: 100%;
 }
 
 body {
   color: #373737;
-  background-color: #f0f0f0;
+}
+
+img {
+  max-width: 100%;
+}
+
+img[src*="@3x"],.x3 {
+  zoom: calc(1 / 3);
+}
+
+img[src*="@2x"],.x2 {
+  zoom: calc(1 / 2);
 }
 
 h5 {
   font-weight: bold
 }
 
-.bg-muted {
-  background-color: #eff0f0;
+.h7 {
+  font-size: .92em;
+  font-weight: bold;
 }
-
 
 .bg-black-50 {
   background-color: #dcdbdb;
 }
 
+.bg-muted {
+  background-color: $text-muted;
+}
 
+.text-third {
+  color: #9a9a9a;
+}
+
+.flag {
+  background-color: #e42d6e;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  padding: .5rem;
+}
 
