--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -1,11 +1,13 @@
-$primary: #ef4465;
+$primary: #9a9a9a;
 $secondary: #373737;
 $purple: #7042e6;
 $info: #34a6e0;
 $light: #fff;
 $success: #37dbbe;
-$danger: #b22178;
+//$danger: #b22178;
+$danger: #e42d6e;
 //$text-muted: #b4b8bf;
+$link : #9a9a9a;
 $text-muted: #f0f0f0;
 $input-bg: transparentize(rgba(0, 0, 0, 0), 0);
 $modal-backdrop-opacity: .6;
@@ -85,3 +87,7 @@ h5 {
   padding: .5rem;
 }
 
+.btn-icon {
+  line-height: 1;
+  padding: 0 !important;
+}
