--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -5,14 +5,17 @@
 
 .btn-lg {
   font-size: 1.3rem;
-  line-height: 1.8;
+  line-height: 2;
 }
 
 .btn-xl {
-  padding-top: .5rem;
-  padding-bottom: .5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   font-size: 2rem;
   font-weight: 600;
+  &.btn-light {
+    color: #bd2686;
+  }
 }
 
 .btn-outline-secondary {
