--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -46,3 +46,27 @@
 .heart {
   background-color: $text-muted;
 }
+
+.profile-img {
+  margin:20vh auto auto;
+  text-align: center;
+  border-radius: 50%;
+  position: relative;
+  width: 40vw;
+  height: 40vw;
+  border: 4px solid #fff;
+  background: #dcdbdb 50% / cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.slick-center {
+  display: flex;
+}
