--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -48,7 +48,7 @@
 }
 
 .profile-img {
-  margin:20vh auto auto;
+  margin: 20vh auto auto;
   text-align: center;
   border-radius: 50%;
   position: relative;
@@ -69,4 +69,9 @@
 
 .slick-center {
   display: flex;
+  overflow: hidden;
+}
+
+.slick-slider {
+
 }
