--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -38,6 +38,7 @@ $widths: (
 
 html, body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -48,11 +49,11 @@ img {
   max-width: 100%;
 }
 
-img[src*="@3x"],.x3 {
+.x3 {
   zoom: calc(1 / 3);
 }
 
-img[src*="@2x"],.x2 {
+.x2 {
   zoom: calc(1 / 2);
 }
 
@@ -61,8 +62,7 @@ h5 {
 }
 
 .h7 {
-  font-size: .92em;
-  font-weight: bold;
+  font-size: 15px;
 }
 
 .bg-black-50 {
@@ -92,7 +92,7 @@ h5 {
 }
 
 .shadow-lg {
-  box-shadow: 0 10px 24px 0 rgba(0, 0, 0, .6) !important;
+  box-shadow: 0 20px 15px 0 rgba(0, 0, 0, .4) !important;
 }
 
 .custom-control-label {
