--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -1,10 +1,12 @@
 $primary: #9a9a9a;
+//$primary: #e42d6e;
 $secondary: #373737;
 $purple: #7042e6;
 $info: #4657f6;
 $light: #fff;
 $success: #37dbbe;
 $danger: #e42d6e;
+$dark : #000;
 $link : #9a9a9a;
 $text-muted: #f0f0f0;
 $input-bg: transparentize(rgba(0, 0, 0, 0), 0);
