--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -125,3 +125,36 @@ h5 {
 .custom-control-label {
   display: flex;
 }
+
+.text-pre {
+  white-space: pre-wrap;
+}
+
+// modal
+.modal-dialog {
+  margin: 0 30px;
+}
+.modal-content {
+  border-radius: 0;
+  border: 0;
+}
+.modal-header {
+  padding: 25px;
+  border-radius: 0;
+  justify-content: center;
+}
+
+.modal-body {
+  padding: 50px 0;
+  text-align: center;
+  white-space: pre-wrap;
+}
+.modal-footer {
+  padding: 0 15px 50px;
+  border: 0;
+  .btn {
+    flex-grow: 1;
+    padding: 15px 0;
+    border-radius: 2rem ;
+  }
+}
