--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -43,9 +43,10 @@
   border-radius: 2rem !important;
 }
 
-.form-control {
+.form-control,.custom-select {
   min-height: 3.3rem;
-
+  //padding-top: 1.8rem;
+  //padding-bottom: 1.8rem;
   &::placeholder {
     color: #8a8a8a;
   }
