--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -44,7 +44,7 @@
 }
 
 .form-control,.custom-select {
-  min-height: 3.3rem;
+  //min-height: 3.3rem;
   //padding-top: 1.8rem;
   //padding-bottom: 1.8rem;
   &::placeholder {
@@ -53,7 +53,7 @@
 }
 
 .rounded .col-form-label {
-  line-height: 2.5;
+  //line-height: 2.5;
 }
 
 // radio
