--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -11,6 +11,7 @@ $link : #9a9a9a;
 $text-muted: #f0f0f0;
 $input-bg: transparentize(rgba(0, 0, 0, 0), 0);
 $modal-backdrop-opacity: .6;
+$input-btn-padding-y: .575rem;
 $font-family-base: "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-vue/src/index';
@@ -45,7 +46,6 @@ html, body {
 
 body {
   color: #373737;
-  background-color: #ededee;
 }
 
 img {
@@ -122,6 +122,16 @@ h5 {
   box-shadow: 0 20px 15px 0 rgba(0, 0, 0, .4) !important;
 }
 
+.table {
+  td, th {
+    vertical-align: middle;
+  }
+}
+
+.col-form-label {
+  font-weight: bold;
+}
+
 .custom-control-label {
   display: flex;
 }
@@ -150,17 +160,12 @@ h5 {
   white-space: pre-wrap;
 }
 .modal-footer {
-  padding: 0 15px 50px;
+  padding: 15px;
   border: 0;
   .btn {
     flex-grow: 1;
-    padding: 15px 0;
+    padding: 10px 0;
     border-radius: 2rem ;
   }
 }
 
-.table {
-  td, th {
-    vertical-align: middle;
-  }
-}
