--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -12,6 +12,7 @@ $text-muted: #f0f0f0;
 $input-bg: transparentize(rgba(0, 0, 0, 0), 0);
 $modal-backdrop-opacity: .6;
 $input-btn-padding-y: .575rem;
+$btn-padding-y: .775rem;
 $font-family-base: "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-vue/src/index';
@@ -88,7 +89,7 @@ h5 {
 }
 
 .bg-purple {
-  background-color: $purple;
+  background-color: $purple !important;
 }
 
 .btn-purple {
@@ -111,6 +112,7 @@ h5 {
   top: 0;
   left: 0;
   padding: .5rem;
+  letter-spacing: -1px;
 }
 
 .shadow-lg {
@@ -228,11 +230,19 @@ h5 {
 .icon-reply {background-image: url('../images/ic-reply@3x.png');}
 .icon-reply-fill {background-image: url('../images/ic-reply-fill@3x.png');}
 
-
-.custom-control-input ~ .custom-control-label::before {
-  background-color: #c8c8c8 !important;
+.custom-switch {
+  .custom-control-input ~ .custom-control-label::before {
+    background-color: #c8c8c8 !important;
+  }
 }
 
 .custom-switch .custom-control-label::after {
   background-color: #fff !important;
+}
+
+.custom-switch-danger {
+  .custom-control-input ~ .custom-control-label::before {
+    background-color: $danger !important;
+    border-color: #ae134a;
+  }
 }
