--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -77,6 +77,7 @@
     background-color: #000;
     border-radius: .75rem;
   }
+
   &.off {
     .bg-dark {
       img {
@@ -132,3 +133,41 @@
   }
 }
 
+.photo-gallery {
+  .blueimp-gallery > .next, .blueimp-gallery > .prev {
+    border: 0;
+    line-height: 15px;
+  }
+
+  .blueimp-gallery > .close {
+    background-color: #fff;
+    opacity: 1;
+    color: $secondary;
+    display: block;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 1rem;
+    margin: 0;
+    text-shadow: none;
+    line-height: 1;
+    font-size: 2rem;
+    font-weight: normal;
+  }
+}
+
+.image {
+  width: 100%;
+  height: 86px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: 1px solid #ebebeb;
+  &:hover,&:active, &.active,&:focus {
+    background-color: $danger !important;
+    border: 0 !important;
+    .b-icon {
+      color: $white !important;
+    }
+  }
+}
