3차 전달 완료본 - 회원가입 관련 페이지 추가

--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -43,6 +43,13 @@
   }
 }
 
+.modal-header button.close {
+  font-weight: lighter;
+  font-size: 3rem;
+  line-height: 1;
+  opacity: 1;
+}
+
 
 // form
 .rounded {
@@ -76,4 +83,13 @@
 
 .custom-radio .custom-control-label::before {
   background-color: #fff;
+}
+
+// checkbox
+.custom-control-label::before {
+  background-color: #fff;
+}
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
+  background-color: $danger;
+  border-radius: 3px;
 }
